--- a/vanillajs/styles/app.scss
+++ b/vanillajs/styles/app.scss
@@ -1,5 +1,68 @@
-@import "bootstrap.min";
+@import "normalize";
+@import "mixins";
+@import "colors";
+@import "pagination";
+@import "repo-list";
+@import "repo-details";
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 14px;
+  color: #333;
+}
 
 h1 {
-  color: black;
+  color: #000;
+  font-weight: 500;
+  margin: 20px 0 10px 0;
+}
+
+a {
+  color: $primary-color;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.col {
+  float:left;
+  padding: 20px;
+  width: 100%;
+}
+
+.hide {
+  display: none;
+}
+
+.btn {
+  text-align: center;
+  padding: 5px 10px;
+  border: 1px solid $border-color;
+  border-radius: 3px;
+  &:hover, &:focus {
+    @include active-item();
+  }
+}
+
+.nav-back {
+  line-height:2;
+  margin-bottom: 10px;
+}
+
+.label {
+  font-size: 11px;
+  color: white;
+  display: inline;
+  padding: 2px 3px;
+  background-color: $label-background-color;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 3px;
 }
