--- a/angular2/src/styles/styles.scss
+++ b/angular2/src/styles/styles.scss
@@ -1,23 +1,68 @@
-/* this file will be extracted to main dist folder and is imported in index.html */
-/* This file is for setting global styles  */
-@import 'variables';
+@import "normalize";
+@import "mixins";
+@import "colors";
+@import "pagination";
+@import "repo-list";
+@import "repo-details";
 
-nav {
-  margin-top: 16px;
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-nav a {
-  background-color: $nav-button-color;
-  color: white;
-  padding: 8px 16px;
-  margin: 8px;
-  vertical-align: middle;
-  line-height: 1.25;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 4px;
+body {
+  font-size: 14px;
+  color: #333;
 }
 
 h1 {
-  color: black;
+  color: #000;
+  font-weight: 500;
+  margin: 20px 0 10px 0;
+}
+
+a {
+  color: $primary-color;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.col {
+  float:left;
+  padding: 20px;
+  width: 100%;
+}
+
+.hide {
+  display: none;
+}
+
+.btn {
+  text-align: center;
+  padding: 5px 10px;
+  border: 1px solid $border-color;
+  border-radius: 3px;
+  &:hover, &:focus {
+    @include active-item();
+  }
+}
+
+.nav-back {
+  line-height:2;
+  margin-bottom: 10px;
+}
+
+.label {
+  font-size: 11px;
+  color: white;
+  display: inline;
+  padding: 2px 3px;
+  background-color: $label-background-color;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 3px;
 }
