angular2 repository page

--- a/angular2/src/app/home/home.component.html
+++ b/angular2/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div>
   <h1>Repository list</h1>
 
-
+  <div class="list-group">
+    <a *ngFor="let item of repositories" [routerLink]="['/repository', item.name]" class="list-group-item">{{item.name}}</a>
+  </div>
 </div>
