--- a/angular2/src/app/home/home.component.html
+++ b/angular2/src/app/home/home.component.html
@@ -2,6 +2,6 @@
   <h1>Repository list</h1>
 
   <div class="list-group">
-    <a *ngFor="let item of repositories" [routerLink]="['/repository', item.name]" class="list-group-item">{{item.name}}</a>
+    <a *ngFor="let item of repositories" [routerLink]="['/repository', userName, item.name]" class="list-group-item">{{item.name}}</a>
   </div>
 </div>
