--- a/angular2/src/styles/styles.scss
+++ b/angular2/src/styles/styles.scss
@@ -68,3 +68,15 @@ a {
   text-align: center;
   border-radius: 3px;
 }
+
+.form-field {
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
